rest: Use the dataprovider for the DiskActivityViewService
Reviewed-on: https://git.eclipse.org/r/103899
Tested-by: Matthew Khouzam <matthew.khouzam@ericsson.com>
